logs/spambayes-lite.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/dns'...
Listing './lib/python3.5/site-packages/dns/rdtypes'...
Listing './lib/python3.5/site-packages/dns/rdtypes/ANY'...
Listing './lib/python3.5/site-packages/dns/rdtypes/IN'...
Listing './lib/python3.5/site-packages/dnspython-1.15.0.dist-info'...
Listing './lib/python3.5/site-packages/dnspython3-1.15.0.egg-info'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/lockfile'...
Listing './lib/python3.5/site-packages/lockfile-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/spambayes_lite'...
Compiling './lib/python3.5/site-packages/spambayes_lite/UserInterface.py'...
***   File "./lib/python3.5/site-packages/spambayes_lite/UserInterface.py", line 236
    exec "def %s(self): self._writeImage('%s')" % \
                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/spambayes_lite/core_resources'...
Listing './lib/python3.5/site-packages/spambayes_lite/languages'...
Listing './lib/python3.5/site-packages/spambayes_lite/languages/de'...
Listing './lib/python3.5/site-packages/spambayes_lite/languages/de/DIALOGS'...
Listing './lib/python3.5/site-packages/spambayes_lite/languages/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/spambayes_lite/languages/es'...
Listing './lib/python3.5/site-packages/spambayes_lite/languages/es/DIALOGS'...
Listing './lib/python3.5/site-packages/spambayes_lite/languages/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/spambayes_lite/languages/es_AR'...
Listing './lib/python3.5/site-packages/spambayes_lite/languages/es_AR/DIALOGS'...
Listing './lib/python3.5/site-packages/spambayes_lite/languages/es_AR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/spambayes_lite/languages/fr'...
Listing './lib/python3.5/site-packages/spambayes_lite/languages/fr/DIALOGS'...
Listing './lib/python3.5/site-packages/spambayes_lite/resources'...
Listing './lib/python3.5/site-packages/spambayes_lite-1.0.0b7.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
